src/objects/Account_Cross_Ref__c/Account_Cross_Ref__c.object-meta.xml
<CustomObject>
    <label>Account Cross Ref</label>
    <nameField>
        <label>Account Cross Ref Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Cross Ref</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>