src/objects/Account_Cross_Ref__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Account Status should not be inactive</errorMessage>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Cross Ref</relationshipLabel>
    <relationshipName>Account_Cross_Ref</relationshipName>
    <type>Lookup</type>
</CustomField>