src/objects/Account_Cross_Ref__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT( Account_Name__r.Customer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Account Status as defined within the Account entry.</inlineHelpText>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>