src/objects/Account_Cross_Ref__c/fields/Auto_Conexiom__c.field-meta.xml
<CustomField>
    <fullName>Auto_Conexiom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Conexiom</label>
    <type>Checkbox</type>
</CustomField>