src/objects/Account_Cross_Ref__c/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <inlineHelpText>Defines the External unique ID for this Account Cross Reference.</inlineHelpText>
    <label>External  Account ID</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>