src/objects/Account_Cross_Ref__c/fields/External_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Name__c</fullName>
    <inlineHelpText>Defines the External Account Name for this Account Cross Reference.</inlineHelpText>
    <label>External Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>