src/objects/Account_Cross_Ref__c/fields/External_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>External_Address_Line_2__c</fullName>
    <inlineHelpText>Defines the External Account Address Line 2 for this Account Cross Reference.</inlineHelpText>
    <label>External Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>