src/objects/Account_Cross_Ref__c/fields/External_City_Name__c.field-meta.xml
<CustomField>
    <fullName>External_City_Name__c</fullName>
    <inlineHelpText>Defines the External Account City Name for this Account Cross Reference.</inlineHelpText>
    <label>External City Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>