src/objects/Account_Cross_Ref__c/fields/External_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Country_Name__c</fullName>
    <inlineHelpText>Defines the External Account Country Name for this Account Cross Reference.</inlineHelpText>
    <label>External Country Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>