src/objects/Account_Cross_Ref__c/fields/External_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Postal_Code__c</fullName>
    <inlineHelpText>Defines the External Account Postal Code for this Account Cross Reference.</inlineHelpText>
    <label>External Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>