src/objects/Account_Cross_Ref__c/fields/SAP_Customer_Group_3__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Group_3__c</fullName>
    <description>SAP Customer Group 3</description>
    <label>SAP Customer Group 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>