src/objects/Account_Cross_Ref__c/fields/Sbl_Account_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Sbl_Account_Row_ID__c</fullName>
    <label>Sbl Account Row ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>