src/objects/Account_Cross_Ref__c/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <inlineHelpText>Defines the Site Code for this Account Cross Reference.</inlineHelpText>
    <label>Site Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>