src/objects/Account_Cross_Ref__c/fields/XREF_Name__c.field-meta.xml
<CustomField>
    <fullName>XREF_Name__c</fullName>
    <inlineHelpText>Defines the SFDC Account Cross Reference Name.</inlineHelpText>
    <label>XREF Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>