src/objects/Account_Cross_Ref__c/fields/XREF_Type__c.field-meta.xml
<CustomField>
    <fullName>XREF_Type__c</fullName>
    <inlineHelpText>Defines the Account Cross Reference Type Code for this Account Cross Reference.</inlineHelpText>
    <label>XREF Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTUAL_REVENUES</fullName>
            </value>
            <value>
                <fullName>ASA_CUSTOMER_XREF</fullName>
            </value>
            <value>
                <fullName>ASA_VOC_CARD</fullName>
            </value>
            <value>
                <fullName>ASA_VOC_CARD_CONTACT</fullName>
            </value>
            <value>
                <fullName>ASA_VOC_CARD_SR</fullName>
            </value>
            <value>
                <fullName>BIZVIEW_SOLD_TO</fullName>
            </value>
            <value>
                <fullName>BMS_SOLD_TO</fullName>
            </value>
            <value>
                <fullName>NonSAP_SOLD_TO</fullName>
            </value>
            <value>
                <fullName>SAP_SOLD_TO</fullName>
            </value>
            <value>
                <fullName>SIMS_SOLD_TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>