src/objects/Account_Cross_Ref__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>External_Account_Name__c</columns>
    <columns>External_Account_ID__c</columns>
    <columns>Site_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>