src/objects/Account_Cross_Ref__c/listViews/AllNoAct.listView-meta.xml
<ListView>
    <fullName>AllNoAct</fullName>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>External_Account_Name__c</columns>
    <columns>External_Account_ID__c</columns>
    <columns>Site_Code__c</columns>
    <columns>Site_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>All - No Account</label>
</ListView>