src/objects/Account_Cross_Ref__c/listViews/BMS.listView-meta.xml
<ListView>
    <fullName>BMS</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Account_Type__c</columns>
    <columns>External_Account_ID__c</columns>
    <columns>External_Account_Name__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Code__c</columns>
    <columns>XREF_Name__c</columns>
    <columns>XREF_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site_Name__c</field>
        <operation>equals</operation>
        <value>BMS</value>
    </filters>
    <label>BMS</label>
</ListView>