src/objects/Account_Cross_Ref__c/listViews/Services.listView-meta.xml
<ListView>
    <fullName>Services</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Account_Type__c</columns>
    <columns>External_Account_ID__c</columns>
    <columns>External_Account_Name__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Code__c</columns>
    <columns>XREF_Name__c</columns>
    <columns>XREF_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>startsWith</operation>
        <value>Serv</value>
    </filters>
    <label>Services</label>
</ListView>