src/objects/Account_Cross_Ref__c/listViews/Services_This_Week.listView-meta.xml
<ListView>
    <fullName>Services_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Status__c</columns>
    <columns>External_Account_ID__c</columns>
    <columns>External_Account_Name__c</columns>
    <columns>Site_Code__c</columns>
    <columns>Site_Name__c</columns>
    <columns>XREF_Name__c</columns>
    <columns>XREF_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_City_Name__c</columns>
    <columns>External_Country_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>startsWith</operation>
        <value>Serv</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Services This Week</label>
</ListView>